--- a/src/main/resources/templates/departments.html
+++ b/src/main/resources/templates/departments.html
@@ -5,10 +5,37 @@
  		<title> Departments</title>
 	</head>
 	<body>
+		<div class="container">
 		<h1>The departments</h1>
-		<ul>
-			<li th:each="department : ${departments}" th:text="${department.name}"></li>
-		</ul>
+		<hr/>
+		
+		<table class="table">
+			<thead>
+				<tr>
+					<th scope="col">Name</th>
+					<th scope="col">Address</th>
+					<th scope="col">Phone</th>
+					<th scope="col">Email</th>
+					<th scope="col">Website</th>
+					<th scope="col">Head_of_department</th>
+				</tr>
+			</thead>
+			
+			<tbody>
+				<tr th:each="department : ${departments}">
+					<td th:text="${department.name}"></td>
+					<td th:text="${department.address}"></td>
+					<td th:text="${department.phone}"></td>
+					<td th:text="${department.email}"></td>
+					<td th:text="${department.website}"></td>
+					<td th:text="${department.headOfDepartment}"></td>
+					
+				</tr>
+				
+			</tbody>
+		</table>
+		
+		</div>
 		<div th:replace="resources :: scripts"></div>
 	</body>
 </html>
