link ai dettagli

--- a/src/main/resources/templates/departments.html
+++ b/src/main/resources/templates/departments.html
@@ -29,6 +29,7 @@
 					<td th:text="${department.email}"></td>
 					<td th:text="${department.website}"></td>
 					<td th:text="${department.headOfDepartment}"></td>
+					<td><a class ="btn btn-primary" th:href="@{|/degrees/${department.id}|}"> Detail</a> </td>
 					
 				</tr>
 				
