--- a/src/main/resources/templates/resources.html
+++ b/src/main/resources/templates/resources.html
@@ -4,6 +4,7 @@
 	<th:block th:fragment="head">
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link th:rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}"/>
 		<link rel="stylesheet" th:href="@{/css/application.css}">
 	</th:block>
 	<body>
